# mdcath-ML-feature-builder

./: .gitignore  AI_context.sh  AI_context.txt  README.md  main.py  pyproject.toml  requirements.txt
config/: default_config.yaml
scripts/: check_environment.py
src/mdcath/: cli.py  config.py  exceptions.py
src/mdcath/features/: builder.py
src/mdcath/io/: hdf5_reader.py  writers.py
src/mdcath/metrics/: rmsf.py
src/mdcath/pipeline/: executor.py
src/mdcath/structure/: frame_extractor.py  pdb_processor.py  properties.py
src/mdcath/utils/: logging_config.py  parallel.py
src/mdcath/visualize/: plots.py
src/mdcath/voxel/: aposteriori_wrapper.py
